--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -56,7 +56,7 @@
       <tr>
         <td>3</td>
         <td><img src="images/Link.png" alt="Link"/></td>
-        <td>Link</td>
+        <td><a href="">Link</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -64,12 +64,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>The Legend of Zelda</td>
+        <td><a href="https://zelda.gamepedia.com/">The Legend of Zelda</a></td>
       </tr>
       <tr>
         <td>4</td>
         <td><img src="images/Samus.png" alt="Samus"/></td>
-        <td>Samus</td>
+        <td><a href="">Samus</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -77,12 +77,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Metroid</td>
+        <td><a href="">Metroid</a></td>
       </tr>
       <tr>
         <td>5</td>
         <td><img src="images/Yoshi.png" alt="Yoshi"/></td>
-        <td>Yoshi</td>
+        <td><a href="">Yoshi</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -90,12 +90,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Yoshi</td>
+        <td><a href="">Yoshi</a></td>
       </tr>
       <tr>
         <td>6</td>
         <td><img src="images/Kirby.png" alt="Kirby"/></td>
-        <td>Kirby</td>
+        <td><a href="">Kirby</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -103,12 +103,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Kirby</td>
+        <td><a href="">Kirby</a></td>
       </tr>
       <tr>
         <td>7</td>
         <td><img src="images/Fox.png" alt="Fox"/></td>
-        <td>Fox</td>
+        <td><a href="">Fox</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -116,12 +116,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Star Fox</td>
+        <td><a href="">Star Fox</a></td>
       </tr>
       <tr>
         <td>8</td>
         <td><img src="images/Pikachu.png" alt="Pikachu"/></td>
-        <td>Pikachu</td>
+        <td><a href="">Pikachu</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -129,12 +129,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Pokémon</td>
+        <td><a href="">Pokémon</a></td>
       </tr>
       <tr>
         <td>9</td>
         <td><img src="images/Luigi.png" alt="Luigi"/></td>
-        <td>Luigi</td>
+        <td><a href="">Luigi</a></td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
@@ -142,12 +142,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td><a href="">Mario</a></td>
       </tr>
       <tr>
         <td>10</td>
         <td><img src="images/Ness.png" alt="Ness"/></td>
-        <td>Ness</td>
+        <td><a href="">Ness</a></td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Default</td>
@@ -155,12 +155,12 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td></td>
-        <td>EarthBound</td>
+        <td><a href="">EarthBound</a></td>
       </tr>
       <tr>
         <td>11</td>
         <td><img src="images/CaptainFalcon.png" alt="Captain Falcon"/></td>
-        <td>Captain Falcon</td>
+        <td><a href="">Captain Falcon</a></td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Default</td>
@@ -168,12 +168,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>F-Zero</td>
+        <td><a href="">F-Zero</a></td>
       </tr>
       <tr>
         <td>12</td>
         <td><img src="images/Jigglypuff.png" alt="Jigglypuff"/></td>
-        <td>Jigglypuff</td>
+        <td><a href="">Jigglypuff</a></td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
@@ -181,12 +181,12 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td></td>
-        <td>Pokémon</td>
+        <td><a href="">Pokémon</a></td>
       </tr>
       <tr>
         <td>13</td>
         <td><img src="images/Peach.png" alt="Peach"/></td>
-        <td>Peach</td>
+        <td><a href="">Peach</a></td>
         <td>Super Smash Bros. Melee</td>
         <td>N/A</td>
         <td>Default</td>
@@ -194,12 +194,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td><a href="">Mario</a></td>
       </tr>
       <tr>
         <td>13ε</td>
         <td><img src="images/Daisy.png" alt="Daisy"/></td>
-        <td>Daisy</td>
+        <td><a href="">Daisy</a></td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -207,12 +207,12 @@
         <td>N/A</td>
         <td>N/A</td>
         <td></td>
-        <td>Mario</td>
+        <td><a href="">Mario</a></td>
       </tr>
       <tr>
         <td>14</td>
         <td><img src="images/Bowser.png" alt="Bowser"/></td>
-        <td>Bowser</td>
+        <td><a href="">Bowser</a></td>
         <td>Super Smash Bros. Melee</td>
         <td>N/A</td>
         <td>Default</td>
@@ -220,7 +220,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td>Mario</td>
+        <td><a href="">Mario</a></td>
       </tr>
       <tr>
         <td>15</td>
@@ -233,7 +233,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td></td>
-        <td>Ice Climber</td>
+        <td><a href="">Ice Climber</a></td>
       </tr>
       <tr>
         <td>16</td>
