--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -80,6 +80,17 @@
         <td><a href="">Metroid</a></td>
       </tr>
       <tr>
+        <td>4ε</td>
+        <td><img src="images/DarkSamus.png" alt="Dark Samus"/></td>
+        <td>Dark Samus</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+      </tr>
+      <tr>
         <td>5</td>
         <td><img src="images/Yoshi.png" alt="Yoshi"/></td>
         <td><a href="">Yoshi</a></td>
