--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -83,12 +83,14 @@
         <td>4ε</td>
         <td><img src="images/DarkSamus.png" alt="Dark Samus"/></td>
         <td>Dark Samus</td>
+        <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
         <td></td>
+        <td>Metroid</td>
       </tr>
       <tr>
         <td>5</td>
@@ -386,6 +388,18 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
+        <td></td>
+        <td>Fire Emblem</td>
+      </tr>
+      <tr>
+        <td>25ε</td>
+        <td><img src="images/Chrom.png" alt="Chrom"/></td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
         <td></td>
         <td>Fire Emblem</td>
       </tr>
