--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -394,6 +394,7 @@
       <tr>
         <td>25ε</td>
         <td><img src="images/Chrom.png" alt="Chrom"/></td>
+        <td>Chrom</td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
         <td>N/A</td>
