--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -30,7 +30,7 @@
       <tr>
         <td>1</td>
         <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td><a href="https://www.mariowiki.com/Mario">Mario</a></td>
+        <td><a href="">Mario</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -38,12 +38,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="https://www.mariowiki.com/">Mario</a></td>
+        <td><a href="">Mario</a></td>
       </tr>
       <tr>
         <td>2</td>
         <td><img src="images/DonkeyKong.png" alt="Donkey Kong"/></td>
-        <td><a href="http://www.dkwiki.com/Donkey_Kong">Donkey Kong</a></td>
+        <td><a href="">Donkey Kong</a></td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -51,7 +51,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="http://www.dkwiki.com/">Donkey Kong</a></td>
+        <td><a href="">Donkey Kong</a></td>
       </tr>
       <tr>
         <td>3</td>
@@ -64,7 +64,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="https://zelda.gamepedia.com/">The Legend of Zelda</a></td>
+        <td><a href="">The Legend of Zelda</a></td>
       </tr>
       <tr>
         <td>4</td>
