--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -30,7 +30,7 @@
       <tr>
         <td>1</td>
         <td><img src="images/Mario.png" alt="Mario"/></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -38,12 +38,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
       </tr>
       <tr>
         <td>2</td>
         <td><img src="images/DonkeyKong.png" alt="Donkey Kong"/></td>
-        <td><a href="">Donkey Kong</a></td>
+        <td>Donkey Kong</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -51,12 +51,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Donkey Kong</a></td>
+        <td>Donkey Kong</td>
       </tr>
       <tr>
         <td>3</td>
         <td><img src="images/Link.png" alt="Link"/></td>
-        <td><a href="">Link</a></td>
+        <td>Link</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -64,12 +64,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">The Legend of Zelda</a></td>
+        <td>The Legend of Zelda</td>
       </tr>
       <tr>
         <td>4</td>
         <td><img src="images/Samus.png" alt="Samus"/></td>
-        <td><a href="">Samus</a></td>
+        <td>Samus</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -77,7 +77,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Metroid</a></td>
+        <td>Metroid</td>
       </tr>
       <tr>
         <td>4ε</td>
@@ -95,7 +95,7 @@
       <tr>
         <td>5</td>
         <td><img src="images/Yoshi.png" alt="Yoshi"/></td>
-        <td><a href="">Yoshi</a></td>
+        <td>Yoshi</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -103,12 +103,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Yoshi</a></td>
+        <td>Yoshi</td>
       </tr>
       <tr>
         <td>6</td>
         <td><img src="images/Kirby.png" alt="Kirby"/></td>
-        <td><a href="">Kirby</a></td>
+        <td>Kirby</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -116,12 +116,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Kirby</a></td>
+        <td>Kirby</td>
       </tr>
       <tr>
         <td>7</td>
         <td><img src="images/Fox.png" alt="Fox"/></td>
-        <td><a href="">Fox</a></td>
+        <td>Fox</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -129,12 +129,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Star Fox</a></td>
+        <td>Star Fox</td>
       </tr>
       <tr>
         <td>8</td>
         <td><img src="images/Pikachu.png" alt="Pikachu"/></td>
-        <td><a href="">Pikachu</a></td>
+        <td>Pikachu</td>
         <td>Super Smash Bros.</td>
         <td>Default</td>
         <td>Default</td>
@@ -142,12 +142,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Pokémon</a></td>
+        <td>Pokémon</td>
       </tr>
       <tr>
         <td>9</td>
         <td><img src="images/Luigi.png" alt="Luigi"/></td>
-        <td><a href="">Luigi</a></td>
+        <td>Luigi</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
@@ -155,12 +155,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
       </tr>
       <tr>
         <td>10</td>
         <td><img src="images/Ness.png" alt="Ness"/></td>
-        <td><a href="">Ness</a></td>
+        <td>Ness</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Default</td>
@@ -168,12 +168,12 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">EarthBound</a></td>
+        <td>EarthBound</td>
       </tr>
       <tr>
         <td>11</td>
         <td><img src="images/CaptainFalcon.png" alt="Captain Falcon"/></td>
-        <td><a href="">Captain Falcon</a></td>
+        <td>Captain Falcon</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Default</td>
@@ -181,12 +181,12 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">F-Zero</a></td>
+        <td>F-Zero</td>
       </tr>
       <tr>
         <td>12</td>
         <td><img src="images/Jigglypuff.png" alt="Jigglypuff"/></td>
-        <td><a href="">Jigglypuff</a></td>
+        <td>Jigglypuff</td>
         <td>Super Smash Bros.</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
@@ -194,12 +194,12 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Pokémon</a></td>
+        <td>Pokémon</td>
       </tr>
       <tr>
         <td>13</td>
         <td><img src="images/Peach.png" alt="Peach"/></td>
-        <td><a href="">Peach</a></td>
+        <td>Peach</td>
         <td>Super Smash Bros. Melee</td>
         <td>N/A</td>
         <td>Default</td>
@@ -207,7 +207,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
       </tr>
       <tr>
         <td>13ε</td>
