--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -212,7 +212,7 @@
       <tr>
         <td>13ε</td>
         <td><img src="images/Daisy.png" alt="Daisy"/></td>
-        <td><a href="">Daisy</a></td>
+        <td>Daisy</td>
         <td>Super Smash Bros. Ultimate</td>
         <td>N/A</td>
         <td>N/A</td>
@@ -220,12 +220,12 @@
         <td>N/A</td>
         <td>N/A</td>
         <td></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
       </tr>
       <tr>
         <td>14</td>
         <td><img src="images/Bowser.png" alt="Bowser"/></td>
-        <td><a href="">Bowser</a></td>
+        <td>Bowser</td>
         <td>Super Smash Bros. Melee</td>
         <td>N/A</td>
         <td>Default</td>
@@ -233,7 +233,7 @@
         <td>Default</td>
         <td>Default</td>
         <td></td>
-        <td><a href="">Mario</a></td>
+        <td>Mario</td>
       </tr>
       <tr>
         <td>15</td>
