--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -246,7 +246,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td></td>
-        <td><a href="">Ice Climber</a></td>
+        <td>Ice Climber</td>
       </tr>
       <tr>
         <td>16</td>
