--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -950,6 +950,19 @@
         <td></td>
         <td>Metroid</td>
       </tr>
+      <tr>
+        <td>66</td>
+        <td><img src="images/SimonBelmont.png" alt="Simon"/></td>
+        <td>Simon</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Castlevania</td>
+      </tr>
     </table>
     <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
   </body>
