--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -386,8 +386,8 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>N/A</td>
-        <td>Unlockable</td>
-        <td>Unlockable</td>
+        <td>Downloadable</td>
+        <td>Downloadable</td>
         <td></td>
         <td>Fire Emblem</td>
       </tr>
