--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -963,6 +963,19 @@
         <td></td>
         <td>Castlevania</td>
       </tr>
+      <tr>
+        <td>66ε</td>
+        <td><img src="images/RichterBelmont.png" alt="Richter"/></td>
+        <td>Richter</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Castlevania</td>
+      </tr>
     </table>
     <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
   </body>
