--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -976,6 +976,19 @@
         <td></td>
         <td>Castlevania</td>
       </tr>
+      <tr>
+        <td>67</td>
+        <td><img src="images/KingKRool.png" alt="King K. Rool"/></td>
+        <td>King K. Rool</td>
+        <td>Super Smash Bros. Ultimate</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td>N/A</td>
+        <td></td>
+        <td>Donkey Kong</td>
+      </tr>
     </table>
     <p>See also: <a href="super-smash-bros-trailers.html">Super Smash Bros. Trailers</a></p>
   </body>
