--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -37,7 +37,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -50,7 +50,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Donkey Kong</td>
       </tr>
       <tr>
@@ -63,7 +63,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -76,7 +76,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Metroid</td>
       </tr>
       <tr>
@@ -89,7 +89,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Metroid</td>
       </tr>
       <tr>
@@ -102,7 +102,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Yoshi</td>
       </tr>
       <tr>
@@ -115,7 +115,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Kirby</td>
       </tr>
       <tr>
@@ -128,7 +128,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Star Fox</td>
       </tr>
       <tr>
@@ -141,7 +141,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Default</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -154,7 +154,7 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -167,7 +167,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>EarthBound</td>
       </tr>
       <tr>
@@ -180,7 +180,7 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>F-Zero</td>
       </tr>
       <tr>
@@ -193,7 +193,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -206,7 +206,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -219,7 +219,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -232,7 +232,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -245,7 +245,7 @@
         <td>Default</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Ice Climber</td>
       </tr>
       <tr>
@@ -258,7 +258,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -271,7 +271,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -284,7 +284,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -297,7 +297,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -310,7 +310,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Star Fox</td>
       </tr>
       <tr>
@@ -323,7 +323,7 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -336,7 +336,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -349,7 +349,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -362,7 +362,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -375,7 +375,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -388,7 +388,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -401,7 +401,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -414,7 +414,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Game & Watch</td>
       </tr>
       <tr>
@@ -427,7 +427,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Kirby</td>
       </tr>
       <tr>
@@ -440,7 +440,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Kid Icarus</td>
       </tr>
       <tr>
@@ -453,7 +453,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Kid Icarus</td>
       </tr>
       <tr>
@@ -466,7 +466,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Metroid</td>
       </tr>
       <tr>
@@ -479,7 +479,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Wario</td>
       </tr>
       <tr>
@@ -492,7 +492,7 @@
         <td>Unlockable</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Metal Gear</td>
       </tr>
       <tr>
@@ -505,7 +505,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -518,7 +518,7 @@
         <td>Default</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -531,7 +531,7 @@
         <td>Default</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -544,7 +544,7 @@
         <td>Default</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -557,7 +557,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -570,7 +570,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Donkey Kong</td>
       </tr>
       <tr>
@@ -583,7 +583,7 @@
         <td>Default</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Lucas</td>
       </tr>
       <tr>
@@ -596,7 +596,7 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Sonic</td>
       </tr>
       <tr>
@@ -609,7 +609,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Kirby</td>
       </tr>
       <tr>
@@ -622,7 +622,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pikmin</td>
       </tr>
       <tr>
@@ -635,7 +635,7 @@
         <td>Unlocable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -648,7 +648,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>R.O.B.</td>
       </tr>
       <tr>
@@ -661,7 +661,7 @@
         <td>Unlockable</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>The Legend of Zelda</td>
       </tr>
       <tr>
@@ -674,7 +674,7 @@
         <td>Unlockable</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Star Fox</td>
       </tr>
       <tr>
@@ -687,7 +687,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Animal Crossing</td>
       </tr>
       <tr>
@@ -700,7 +700,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mega Man</td>
       </tr>
       <tr>
@@ -713,7 +713,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Wii Fit</td>
       </tr>
       <tr>
@@ -726,7 +726,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -739,7 +739,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Punch-Out!!</td>
       </tr>
       <tr>
@@ -752,7 +752,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pokémon</td>
       </tr>
       <tr>
@@ -765,7 +765,7 @@
         <td>N/A</td>
         <td>Custom</td>
         <td>Custom</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Super Smash Bros.</td>
       </tr>
       <tr>
@@ -778,7 +778,7 @@
         <td>N/A</td>
         <td>Custom</td>
         <td>Custom</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Super Smash Bros.</td>
       </tr>
       <tr>
@@ -791,7 +791,7 @@
         <td>N/A</td>
         <td>Custom</td>
         <td>Custom</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Super Smash Bros</td>
       </tr>
       <tr>
@@ -804,7 +804,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Kid Icarus</td>
       </tr>
       <tr>
@@ -817,7 +817,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Pac-Man</td>
       </tr>
       <tr>
@@ -830,7 +830,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -843,7 +843,7 @@
         <td>N/A</td>
         <td>Default</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Xenoblade</td>
       </tr>
       <tr>
@@ -856,7 +856,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Default</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Mario</td>
       </tr>
       <tr>
@@ -869,7 +869,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Unlockable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Duck Hunt</td>
       </tr>
       <tr>
@@ -882,7 +882,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Street Fighter</td>
       </tr>
       <tr>
@@ -895,7 +895,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Final Fantasy</td>
       </tr>
       <tr>
@@ -908,7 +908,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Fire Emblem</td>
       </tr>
       <tr>
@@ -921,7 +921,7 @@
         <td>N/A</td>
         <td>Downloadable</td>
         <td>Downloadable</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Bayonetta</td>
       </tr>
       <tr>
@@ -934,7 +934,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Splatoon</td>
       </tr>
       <tr>
@@ -947,7 +947,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Metroid</td>
       </tr>
       <tr>
@@ -960,7 +960,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Castlevania</td>
       </tr>
       <tr>
@@ -973,7 +973,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Castlevania</td>
       </tr>
       <tr>
@@ -986,7 +986,7 @@
         <td>N/A</td>
         <td>N/A</td>
         <td>N/A</td>
-        <td></td>
+        <td>Unlockable</td>
         <td>Donkey Kong</td>
       </tr>
     </table>
