--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -26,6 +26,7 @@
         <th>Super Smash Bros. for Wii U Status</th>
         <th>Super Smash Bros. Ultimate Status</th>
         <th>Universe</th>
+        <th>Special Moves</th>
       </tr>
       <tr>
         <td>1</td>
@@ -39,6 +40,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Mario</td>
+        <td>Standard: Fireball<br/>Side: Cape<br/>Up: Super Jump Punch<br/>Down: Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>Final Smash: Mario Finale</td>
       </tr>
       <tr>
         <td>2</td>
