--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -54,6 +54,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Donkey Kong</td>
+        <td>Standard: Giant Punch<br/>Side: Headbutt<br/>Up: Spinning Kong<br/>Down: Hand Slap<br/>Final Smash: Konga Beat (<i>Brawl</i>, 3DS/Wii U)</td>
       </tr>
       <tr>
         <td>3</td>
@@ -67,6 +68,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>4</td>
@@ -80,6 +82,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Metroid</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>4ε</td>
@@ -93,6 +96,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metroid</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>5</td>
@@ -106,6 +110,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Yoshi</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>6</td>
@@ -119,6 +124,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Kirby</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>7</td>
@@ -132,6 +138,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Star Fox</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>8</td>
@@ -145,6 +152,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>9</td>
@@ -158,6 +166,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>10</td>
@@ -171,6 +180,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>EarthBound</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>11</td>
@@ -184,6 +194,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>F-Zero</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>12</td>
@@ -197,6 +208,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>13</td>
