--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -68,7 +68,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i> onward)<br/>Side: Boomerang (<i>Melee</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>Up: Spin Attack<br/>Down: Bomb<br/>Final Smash: Triforce Slash (<i>Brawl</i>, 3DS/Wii U)</td>
       </tr>
       <tr>
         <td>4</td>
@@ -82,7 +82,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Metroid</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Charge Shot<br/>Side: Missle<br/>Up: Screw Attack<br/>Down: Bomb<br/>Final Smash: Zero Laser</td>
       </tr>
       <tr>
         <td>4ε</td>
@@ -110,7 +110,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Yoshi</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Egg Lay<br/>Side: Egg Roll<br/>Up: Egg Throw<br/>Down: Yoshi Bomb<br/>Final Smash: Super Dragon</td>
       </tr>
       <tr>
         <td>6</td>
@@ -124,7 +124,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Kirby</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Inhale<br/>Side: Hammer (<i>Melee</i>, <i>Brawl</i>); Hammer Flip (3DS/Wii U onward)<br/>Up: Final Cutter<br/>Down: Stone<br/>Final Smash: Cook Kirby (<i>Brawl</i>); Ultra Sword (3DS/Wii U onward)</td>
       </tr>
       <tr>
         <td>7</td>
@@ -138,7 +138,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Star Fox</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Blaster<br/>Side: Fox Illusion<br/>Up: Fire Fox<br/>Down: Reflector<br/>Final Smash: Landmaster (<i>Brawl</i>, 3DS/Wii U)</td>
       </tr>
       <tr>
         <td>8</td>
@@ -152,7 +152,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Thunder Jolt<br/>Side: Skull Bash<br/>Up: Quick Attack<br/>Down: Thunder<br/>Final Smash: Volt Tackle</td>
       </tr>
       <tr>
         <td>9</td>
