--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -166,7 +166,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Fireball<br/>Side: Green Missle<br/>Up: Super Jump Punch<br/>Down: Luigi Cyclone<br/>Final Smash: Negative Zone (<i>Brawl</i>); Poltergust 5000 (3DS/Wii U)</td>
       </tr>
       <tr>
         <td>10</td>
@@ -180,7 +180,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>EarthBound</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: PK Fire (64); PK Flash (<i>Melee</i> onward)<br/>Side: PK Fire<br/>Up: PK Thunder<br/>Down: PSI Magnet<br/>Final Smash: PK Starstorm</td>
       </tr>
       <tr>
         <td>11</td>
@@ -194,7 +194,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>F-Zero</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Falcon Punch<br/>Side: Raptor Boost<br/>Up: Falcon Dive<br/>Down: Falcon Kick<br/>Final Smash: Blue Falcon</td>
       </tr>
       <tr>
         <td>12</td>
@@ -208,7 +208,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Pound (64); Rollout (<i>Melee</i> onward)<br/>Side: Pound<br/>Up: Sing<br/>Down: Rest<br/>Final Smash: Puff Up</td>
       </tr>
       <tr>
         <td>13</td>
@@ -222,6 +222,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td>Standard: Toad<br/>Side: Peach Bomber<br/>Up: Peach Parasol<br/>Down: Vegetable<br/>Final Smash: Peach Blossom</td>
       </tr>
       <tr>
         <td>13ε</td>
@@ -235,6 +236,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>14</td>
@@ -248,6 +250,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td>Standard: Fire Breath<br/>Side: Koopa Klaw (<i>Melee</i>); Flying Slam (<i>Brawl</i> onward)<br/>Up: Whirling Fortress<br/>Down: Bowser Bomb<br/>Final Smash: Giga Bowser</td>
       </tr>
       <tr>
         <td>15</td>
@@ -261,6 +264,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Ice Climber</td>
+        <td>Standard: Ice Shot<br/>Side: Squall Hammer<br/>Up: Belay<br/>Down: Blizzard<br/>Final Smash: Iceberg</td>
       </tr>
       <tr>
         <td>16</td>
@@ -274,6 +278,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: Needle Storm<br/>Side: Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U)<br/>Up: Vanish<br/>Down: Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U)<br/>Final Smash: Light Arrow(<i>Brawl</i>, 3DS/Wii U)</td>
       </tr>
       <tr>
         <td>17</td>
@@ -287,6 +292,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: Nayru's Love<br/>Side: Din's Fire<br/>Up: Farore's Wind<br/>Down: Transform (<i>Melee</i>, <i>Brawl</i>); Phantom Slash (3DS/Wii U onward)<br/>Final Smash: Light Arrow (<i>Brawl</i>, 3DS/Wii U); Triforce of Wisdom (<i>Ultimate</i>)</td>
       </tr>
       <tr>
         <td>18</td>
@@ -300,6 +306,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>19</td>
@@ -313,6 +320,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>20</td>
@@ -326,6 +334,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Star Fox</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>21</td>
@@ -339,6 +348,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>21ε</td>
@@ -352,6 +362,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>22</td>
@@ -365,6 +376,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>23</td>
@@ -378,6 +390,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>24</td>
@@ -391,6 +404,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>25</td>
@@ -404,6 +418,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>25ε</td>
@@ -417,6 +432,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>26</td>
@@ -430,6 +446,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Game & Watch</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>27</td>
