--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -306,7 +306,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Megavitamins<br/>Side: Super Sheet<br/>Up: Super Jump Punch<br/>Down: Dr. Tornado<br/>Final Smash: Doctor Finale</td>
       </tr>
       <tr>
         <td>19</td>
@@ -320,7 +320,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Thunder Jolt<br/>Side: Skull Bash<br/>Up: Agility<br/>Down: Thunder<br/>Final Smash: </td>
       </tr>
       <tr>
         <td>20</td>
@@ -334,7 +334,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Star Fox</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Blaster<br/>Side: Falco Phantasm<br/>Up: Fire Bird<br/>Down: Reflector<br/>Final Smash: Landmaster (<i>Brawl</i>, 3DS/Wii U)</td>
       </tr>
       <tr>
         <td>21</td>
@@ -348,7 +348,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
       </tr>
       <tr>
         <td>21ε</td>
@@ -362,7 +362,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
       </tr>
       <tr>
         <td>22</td>
@@ -376,7 +376,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Fire Bow<br/>Side: Boomerang<br/>Up: Spin Attack<br/>Down: Bomb<br/>Final Smash: </td>
       </tr>
       <tr>
         <td>23</td>
@@ -390,7 +390,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Warlock Punch<br/>Side: Gerudo Dragon (<i>Melee</i>); Flame Choke (<i>Brawl</i> onward)<br/>Up: Dark Dive<br/>Down: Wozard's Foot<br/>Final Smash: Beast Ganon (<i>Brawl</i>, 3DS/Wii U); Demon King Ganon (<i>Ultimate</i>)</td>
       </tr>
       <tr>
         <td>24</td>
