--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -404,7 +404,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Shadow Ball<br/>Side: Confusion<br/>Up: Teleport<br/>Down: Disable<br/>Final Smash: Psystrike</td>
       </tr>
       <tr>
         <td>25</td>
@@ -418,7 +418,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Flare Blade<br/>Side: Double-Edge Dance<br/>Up: Blazer<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
       </tr>
       <tr>
         <td>25ε</td>
@@ -446,7 +446,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Game & Watch</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Chef<br/>Side: Judge<br/>Up: Fire<br/>Down: Oil Panic<br/>Final Smash: Octopus</td>
       </tr>
       <tr>
         <td>27</td>
