--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -460,6 +460,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>28</td>
@@ -473,6 +474,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>28ε</td>
@@ -486,6 +488,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>29</td>
@@ -499,6 +502,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Metroid</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>30</td>
@@ -512,6 +516,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Wario</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>31</td>
@@ -525,6 +530,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metal Gear</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>32</td>
@@ -538,6 +544,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>33/34/35</td>
@@ -551,6 +558,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>33</td>
@@ -564,6 +572,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>34</td>
@@ -577,6 +586,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>35</td>
@@ -590,6 +600,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>36</td>
@@ -603,6 +614,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Donkey Kong</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>37</td>
@@ -616,6 +628,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Lucas</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>38</td>
@@ -629,6 +642,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Sonic</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>39</td>
@@ -642,6 +656,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>40</td>
@@ -655,6 +670,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pikmin</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>41</td>
@@ -668,6 +684,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>42</td>
@@ -681,6 +698,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>R.O.B.</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>43</td>
@@ -694,6 +712,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>44</td>
@@ -707,6 +726,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Star Fox</td>
+        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
       </tr>
       <tr>
         <td>45</td>
